# tengine-lite-classification-demo

./: CMakeLists.txt  main.cpp
src/: tengine_operations.c
